# helix-zsh

./: .gitignore  README.md  helix_zsh.zsh  install.sh  uninstall.sh
helix-driver/: Cargo.toml
helix-driver/src/: main.rs
